@@ -9,6 +9,7 @@ Legend:
 Version 0.3.5 - ??
 - [new] Added WFRequestController_HTTPException which takes in a ($msg, $httpCode) which defaults to HTTP 500, internal server exception. This should make it much easier to send arbitrary HTTP codes without having to subclass each one. WFRequestController_HTTPException is *not* emailed through the uncaught exception handler.
 - [BC-break] WFSelect will now "pushBindings" even if it is disabled. This shouldn't cause any problem since the data is immutable on the form, but is being listed as a BC here out of an abundance of caution.
+- [bugfix] WFYAHOO_widget_ColorPicker now works properly when used as a prototype for WFDynamic.
 
 Version 0.3.4 - 1/8/2010
 - [new] Now PEAR-installable! pear channel-discover apinstein.pearfarm.org; pear install apinstein/phocoa
